# hivememory

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: baseline.py  common.py  conflict_demo.py  conflict_demo_results.json  evaluate.py  generate_charts.py  real_benchmark.py  results.json  results_summary.md  run_all.py  shared.py
docs/: architecture.html  index.html  results.html  style.css
examples/: basic_usage.py  research_task.py
hivememory/: __init__.py  artifact.py  conflicts.py  core.py  provenance.py  store.py  wiki.py
screenshots/: demo_terminal.txt
tests/: test_artifact.py  test_conflicts.py  test_provenance.py  test_store.py
